# smile

./: .gitattributes  .gitignore  COPYING  README.rst  SMILE Fixes.txt  StartScreen.py  StartScreen_2.py  TODO.rst  delete_this.py  demographics.py  dotbox.py  event.py  freekey.py  kivy_overrides.py  pyproject.toml  setup.py  state.py  versioning.py  video.py
docs/: Makefile  READ_ME.txt  accessing_data.rst  advanced_smile.rst  android.html  android.rst  conf.py  genindex.html  grating.rst  how_to_smile.rst  index.html  index.rst  install.rst  list_present.py  make.bat  modules.html  moving_dots.rst  new-install.rst  objects.inv  real_examples.rst  search.html  searchindex.js  seeking_help.rst  smile.html  smile.rst  smile_states.rst  state_machine.rst  tutorial.html  tutorial.rst  tutorial_2.rst
smile/: Living.txt  OneDrive - Shortcut.lnk  README.md  SMILE Fixes.txt  StartScreen.py  StartScreen_2.py  __init__.py  audio.py  clock.py  common.py  dag.py  delete_this.py  demographics.py  dotbox.py  experiment.py  freekey.py  grating.py  joystick.py  keyboard.py  kivy_overrides.py  kivy_update.py  log.py  log_test.py  lsl.py  main.py  math_distract.py  mathdistract.py  mouse.py  moving_dots.py  movingdot.py  niusb_interface.py  pulse.py  python3_test.py  questionnaire.py  ref.py  scale.py  socket_interface.py  startup.py  state.py  test.py  (+5 more)
tests/: test_audio.py  test_clean_attrs.py  test_crashlogger.py  test_datadir.py  test_dotbox.py  test_freekey.py  test_func.py  test_grating.py  test_keyboard.py  test_keys.py  test_math_distract.py  test_mathdistract.py  test_mouse.py  (+8 more)
(+142 files in other folders)
